--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.7",
+    "@types/serialize-javascript": "^5.0.4",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2"
+  },
+  "dependencies": {
+    "serialize-javascript": "^6.0.2"
   }
 }
