--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.7",
     "@types/serialize-javascript": "^5.0.4",
+    "@types/word-extractor": "^1.0.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2"
   },
   "dependencies": {
-    "serialize-javascript": "^6.0.2"
+    "serialize-javascript": "^6.0.2",
+    "word-extractor": "^1.0.4"
   }
 }
