dev: реализация подключения к part_db

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "watchDir": "..\\data",
-    "storeDir": "..\\store",
-    "limitPartKb": 1000000
+    "watchDir": "./data",
+    "storeDir": "./store",
+    "limitPartMb": 1000
 }
