fix: исправлены зависимости тестов, убраны лишние

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "watchDir": "./data",
+    "watchDir": "./__fixtures__",
     "storeDir": "./store",
     "limitPartMb": 500,
     "countWorkers": 4
