ref: параметры итерации по наблюдаемому каталогу вынесены в конструктор Dispatcher для настройки пользователем через config

--- a/src/config.json
+++ b/src/config.json
@@ -2,5 +2,6 @@
     "watchDir": "./__fixtures__",
     "storeDir": "./store",
     "limitPartMb": 500,
-    "countWorkers": 4
+    "countWorkers": 4,
+    "onlyThisExts": [".doc", ".docx", ".csv", ".txt"]
 }
